# arm-fault-simulator

./: .gitignore  LICENSE  README.md  meson.build  run_example.py
example/: example.c  linker.ld  start_emulation.py
src/: main.cpp
subprojects/armory/: meson.build
subprojects/armory/include/armory/: context.h  fault_combination.h  fault_model.h  fault_simulator.h  fault_tracer.h  instruction_fault_model.h  register_fault_model.h  snapshot.h  subset_chooser.h  termcolor.h  types.h
subprojects/armory/src/: fault_combination.cpp  fault_model.cpp  fault_simulator.cpp  fault_tracer.cpp  instruction_fault_model.cpp  meson.build  register_fault_model.cpp  simulate_instruction_fault.cpp  simulate_register_fault.cpp  snapshot.cpp
subprojects/fault_simulator/: meson.build
subprojects/fault_simulator/include/fault_simulator/: configuration.h  fault_models.h  fault_printing.h  fault_simulator.h
subprojects/fault_simulator/src/: fault_models.cpp  fault_printing.cpp  fault_simulator.cpp  meson.build
subprojects/m-ulator/: meson.build
subprojects/m-ulator/include/m-ulator/: arm_functions.h  callback_hook.h  disassembler.h  emulator.h  instruction.h  instruction_decoder.h  memory_region.h  mnemonics.h  registers.h
subprojects/m-ulator/src/: architectures.cpp  arm_functions.cpp  conditions.cpp  disassembler.cpp  emulator_base.cpp  emulator_execution.cpp  instruction.cpp  instruction_decoder.cpp  meson.build  mnemonics.cpp  registers.cpp  return_codes.cpp  shift_types.cpp
