src += files(
    'architectures.cpp',
    'arm_functions.cpp',
    'conditions.cpp',
    'disassembler.cpp',
    'emulator_base.cpp',
    'emulator_execution.cpp',
    'instruction.cpp',
    'instruction_decoder.cpp',
    'mnemonics.cpp',
    'registers.cpp',
    'return_codes.cpp',
    'shift_types.cpp',
)
